<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:gravity="center">

    <ImageView
        android:src="@drawable/g"
        android:id="@+id/imageview"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:contentDescription="@string/a" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp">

        <TextView
            android:textColor="#FFFFFFFF"
            android:id="@+id/txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt1"
            android:textSize="20sp" />

        <TextView
            android:textColor="#FFFFFFFF"
            android:id="@+id/txt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt2"
            android:textSize="20sp" />



    </LinearLayout>


</LinearLayout>